# Flask-Web-Scrapper

./: README.md  jobs.csv  main.py  pyproject.toml  save.py  scrapper.py  scrapper_ro.py  scrapper_so.py  scrapper_wwr.py
templates/: index.html  report.html
